Print GC details when developing